fix(*): debounce DOM updates

--- a/app/components/lookbook/nav/component.html.erb
+++ b/app/components/lookbook/nav/component.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="overflow-auto">
+  <div class="overflow-auto h-full">
     <% if items.any? %>
       <ul class="py-2" x-ref="items" x-show="!empty" x-cloak>
         <%= safe_join(items) %>
