--- a/docs/src/_components/shared/method_info.html.erb
+++ b/docs/src/_components/shared/method_info.html.erb
@@ -1,15 +1,15 @@
 <%= tag.div **html_attrs do %>
-  <div class="not-prose mb-4">
-    <h3 id="method-<%= name.gsub("_", "-") %>" class="font-bold text-lg text-indigo-600">
+  <div class="not-prose">
+    <h3 id="method-<%= name.gsub("_", "-").gsub(".", "") %>" class="font-bold text-lg text-indigo-600">
         <%= title %>
     </h3>
-    <% if purpose %>
-      <div class="mt-3 prose">
-        <%= markdownify purpose %>
-      </div>
-    <% end %>
   </div>
-  <div class="prose space-y-6">
+  <% if purpose %>
+    <div class="mt-3 prose">
+      <%= markdownify purpose %>
+    </div>
+  <% end %>
+  <div class="prose space-y-6 mt-4">
    <% if description %>
       <div class="italic opacity-70">
         <%= markdownify description %>
