fix(components): delegate all component rendering to helper and ascertain correct render method
Previous was relying on the `render` method to render components but that is not correct for older
Rails versions with monkey patch disabled

fix #156

--- a/app/components/lookbook/button/component.html.erb
+++ b/app/components/lookbook/button/component.html.erb
@@ -10,7 +10,7 @@
   disabled: @disabled,
   "@keydown.esc.stop": "hideDropdown" do %>
   <span x-ref="icon">
-    <%= icon || render_component(:icon, name: @icon, size: icon_size, ":class": "{'animate-spin': _spinning}") %>
+    <%= icon || lookbook_render(:icon, name: @icon, size: icon_size, ":class": "{'animate-spin': _spinning}") %>
   </span>
   <% if @tooltip %>
     <label class="hidden" x-ref="tooltip"><%= @tooltip %></label>
