--- a/app/components/lookbook/copy_button/component.html.erb
+++ b/app/components/lookbook/copy_button/component.html.erb
@@ -1,4 +1,4 @@
-<%= render_component :button,
+<%= lookbook_render :button,
   name: "copy-button",
   **@button_attrs,
   "x-data": prepare_alpine_data,
