--- a/app/components/lookbook/page_tabs/component.html.erb
+++ b/app/components/lookbook/page_tabs/component.html.erb
@@ -1,16 +1,16 @@
  <%= render_component_tag "x-data": "{ activeTab: null }" do %>
   <div class="flex w-full border-b border-lookbook-divider mb-6">
-    <%= render_component :tabs, theme: :page do |t| %>
+    <%= lookbook_render :tabs, theme: :page do |t| %>
       <% @tabs.each do |props| %>
         <%= t.tab **props %>
       <% end %>
     <% end %>
   </div>
-  <%= render_component :tab_panels do |t| %>
+  <%= lookbook_render :tab_panels do |t| %>
     <% @tabs.each do |props| %>
       <% t.panel name: props[:name] do %>
-        <%= render_component :prose, markdown: props[:markdown], class: "max-w-none flex-none" do %>
-          <%== props[:content] %>
+        <%= lookbook_render :prose, markdown: props[:markdown], class: "max-w-none flex-none" do %>
+          <%== props[:tab_content] %>
         <% end %>
       <% end %>
     <% end %>
