--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -1,6 +1,6 @@
 <% content_for :shell do %>
   <% if @previews.any? || @pages.any? %>
-    <%= render_component :split_layout,
+    <%= lookbook_render :split_layout,
       alpine_data: "$store.layout.main",
       ":class": "$store.layout.mobile && '!block'" do |layout| %>
 
@@ -13,13 +13,13 @@
         "@click.outside": "closeMobileSidebar",
         cloak: true do %>
 
-        <%= render_component :split_layout,
+        <%= lookbook_render :split_layout,
           alpine_data: "$store.layout.#{@pages.any? && @previews.any? ? "sidebar" : "singleSectionSidebar"}",
           style: "height: calc(100vh - 2.5rem);" do |layout| %>
 
           <% if @previews.any? %>
             <% layout.pane class: "overflow-hidden" do %>
-              <%= render_component :nav,
+              <%= lookbook_render :nav,
                 id: "previews-nav",
                 collection: @previews,
                 alpine_data: "$store.nav.previews",
@@ -36,7 +36,7 @@
 
           <% if @pages.any? %>
             <% layout.pane class: "overflow-hidden" do %>
-              <%= render_component :nav,
+              <%= lookbook_render :nav,
                 id: "pages-nav",
                 collection: @pages,
                 alpine_data: "$store.nav.pages" do |nav| %>
