--- a/app/views/layouts/lookbook/page.html.erb
+++ b/app/views/layouts/lookbook/page.html.erb
@@ -12,14 +12,14 @@
           <div class="relative z-10 flex items-center">
           
           <% if @previous_page %>
-            <%= render_component :button,
+            <%= lookbook_render :button,
               size: :lg,
               icon: :chevron_left,
               tooltip: "Previous page",
               href: lookbook_page_path(@previous_page.lookup_path),
               class: "pr-0.5 bg-transparent" %>
           <% else %>
-            <%= render_component :button,
+            <%= lookbook_render :button,
               size: :lg,
               icon: :chevron_left,
               disabled: true,
@@ -27,14 +27,14 @@
           <% end %>
 
           <% if @next_page %>
-            <%= render_component :button,
+            <%= lookbook_render :button,
               size: :lg,
               icon: :chevron_right,
               tooltip: "Next page",
               href: lookbook_page_path(@next_page.lookup_path),
               class: "pl-0.5 bg-transparent" %>
           <% else %>
-            <%= render_component :button,
+            <%= lookbook_render :button,
               size: :lg,
               icon: :chevron_right,
               disabled: true,
