--- a/app/views/layouts/lookbook/shell.html.erb
+++ b/app/views/layouts/lookbook/shell.html.erb
@@ -13,7 +13,7 @@
       </style>
     <% end %>
 
-    <%= render_component :header, id: "app-header", debug_menu: config.debug_menu do |header| %>
+    <%= lookbook_render :header, id: "app-header", debug_menu: config.debug_menu do |header| %>
       <% header.branding { config.project_name } %>
     <% end %>
 
