--- a/app/views/lookbook/previews/panels/_output.html.erb
+++ b/app/views/lookbook/previews/panels/_output.html.erb
@@ -1,4 +1,4 @@
-<%= render_component :code, line_numbers: true, full_height: true do -%>
+<%= lookbook_render :code, line_numbers: true, full_height: true do -%>
   <% if examples.many? -%>
     <% examples.each do |example| -%><%== "<!-- #{example.label} -->\n#{beautify(example.output)}\n\n" -%><% end %>
   <%- else -%>
