--- a/app/components/lookbook/params_editor/field/component.html.erb
+++ b/app/components/lookbook/params_editor/field/component.html.erb
@@ -8,29 +8,34 @@
     
     <div class="flex-grow">
       <% if field_type == "text" %>
-      
-        <input
-          class="form-input"
-          value="<%= value %>"
-          type="<%= input_type %>"
-          x-bind="bindings.input || {}">
+
+        <%= text_field_tag name, value, {
+          **options,
+          class: "form-input",
+          type: input_type,
+          "x-bind": "bindings.input || {}",
+        } %>
 
       <% elsif field_type == "textarea" %>
 
-        <textarea
-          class="form-input"
-          rows="4"
-          x-bind="bindings.input || {}"><%= value %></textarea>
+        <%= text_area_tag name, value, {
+          **options,
+          class: "form-input",
+          rows: 4,
+          "x-bind": "bindings.input || {}"
+        } %>
 
       <% elsif field_type == "select" %>
 
-        <select
-          class="form-input"
-          x-bind="bindings.input || {}"
-          x-model="value"
-          name="<%= name %>">
-          <%= options_for_select(@options || [], value) %>
-        </select>
+        <%= select_tag name,
+          options_for_select(options[:option_tags] || [], value),
+          {
+            **options.except(:option_tags),
+            class: "form-input",
+            "x-bind": "bindings.input || {}",
+            "x-model": "value"
+          }
+        %>
 
       <% elsif field_type == "toggle" %>
         <button type="button"
