refactor(debug_menu): split debug menu out into standalone component, tidy up

--- a/app/components/lookbook/button/component.html.erb
+++ b/app/components/lookbook/button/component.html.erb
@@ -18,7 +18,7 @@
   <% if content %>
     <div x-ref="content"><%== content %></div>
   <% end %>
-  <% if dropdown %>
+  <% if dropdown? %>
     <div class="hidden" x-ref="dropdown">
       <div class="bg-white divide-y divide-lookbook-divider text-left">
         <%== dropdown %>
