--- a/app/components/lookbook/nav/item/component.html.erb
+++ b/app/components/lookbook/nav/item/component.html.erb
@@ -3,7 +3,7 @@
   class: "list-none",
   "x-show": "!filteredOut",
   data: {
-    "entity-type": @item.type
+    "entity-type": item.type
   },
   cloak: true do %>
   <%= lookbook_tag href.present? ? :a : :div,
