refactor(params): make property names clearer and more consistent

--- a/app/components/lookbook/params/field/component.html.erb
+++ b/app/components/lookbook/params/field/component.html.erb
@@ -15,16 +15,16 @@
     </label>
     
     <div class="flex-grow">
-      <% if field_type == "text" %>
+      <% if input == "text" %>
 
         <%= text_field_tag name, value, {
           **field_options,
           class: "form-input",
-          type: input_type,
+          type: type,
           "x-bind": "bindings.input || {}",
         } %>
 
-      <% elsif field_type == "textarea" %>
+      <% elsif input == "textarea" %>
 
         <%= text_area_tag name, value, {
           rows: 4,
@@ -33,7 +33,7 @@
           "x-bind": "bindings.input || {}"
         } %>
 
-      <% elsif field_type == "select" %>
+      <% elsif input == "select" %>
         
         <%= select_tag name,
           options_for_select(config_options[:choices] || [], value),
@@ -45,7 +45,7 @@
           }
         %>
 
-      <% elsif field_type == "toggle" %>
+      <% elsif input == "toggle" %>
         <button type="button"
           class="<%= value == true ? "bg-lookbook-input-toggle-active" : "bg-lookbook-input-toggle" %> relative inline-flex flex-shrink-0 h-6 w-11 border-2 border-transparent rounded-full cursor-pointer transition-colors ease-in-out duration-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-input-border-focus"
           role="switch"
