--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -2033,6 +2033,14 @@ pre[class*="language-"] {
   height: .75rem;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-\[9px\] {
   height: 9px;
 }
@@ -2043,14 +2051,6 @@ pre[class*="language-"] {
 
 .h-4 {
   height: 1rem;
-}
-
-.h-6 {
-  height: 1.5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
 }
 
 .\!h-auto {
@@ -2081,6 +2081,14 @@ pre[class*="language-"] {
   width: .75rem;
 }
 
+.w-11 {
+  width: 2.75rem;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-\[9px\] {
   width: 9px;
 }
@@ -2091,14 +2099,6 @@ pre[class*="language-"] {
 
 .w-\[140px\] {
   width: 140px;
-}
-
-.w-11 {
-  width: 2.75rem;
-}
-
-.w-5 {
-  width: 1.25rem;
 }
 
 .min-w-\[180px\] {
@@ -2160,13 +2160,13 @@ pre[class*="language-"] {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
+.translate-x-5 {
+  --tw-translate-x: 1.25rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-5 {
-  --tw-translate-x: 1.25rem;
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -2203,6 +2203,10 @@ pre[class*="language-"] {
   cursor: not-allowed;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .cursor-\[col-resize\] {
   cursor: col-resize;
 }
@@ -2213,10 +2217,6 @@ pre[class*="language-"] {
 
 .cursor-\[nwse-resize\] {
   cursor: nwse-resize;
-}
-
-.cursor-pointer {
-  cursor: pointer;
 }
 
 .select-none {
@@ -2502,6 +2502,14 @@ pre[class*="language-"] {
   background-color: var(--lookbook-header-bg) !important;
 }
 
+.bg-lookbook-input-toggle-active {
+  background-color: var(--lookbook-input-toggle-active);
+}
+
+.bg-lookbook-input-toggle {
+  background-color: var(--lookbook-input-toggle);
+}
+
 .bg-lookbook-divider {
   background-color: var(--lookbook-divider);
 }
@@ -2520,14 +2528,6 @@ pre[class*="language-"] {
 
 .\!bg-lookbook-nav-item-active {
   background-color: var(--lookbook-nav-item-active) !important;
-}
-
-.bg-lookbook-input-toggle-active {
-  background-color: var(--lookbook-input-toggle-active);
-}
-
-.bg-lookbook-input-toggle {
-  background-color: var(--lookbook-input-toggle);
 }
 
 .stroke-current {
@@ -2824,6 +2824,11 @@ pre[class*="language-"] {
 
 .text-lookbook-nav-icon-stroke {
   color: var(--lookbook-nav-icon-stroke);
+}
+
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-lookbook-tabs-text {
